--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>USE CODE:SPRING20</p>
       </div>
       <div class="navbar">
-        <img src="./icons/Logo.svg" alt="Logo" />
+        <a href="#"><img src="./icons/Logo.svg" alt="Logo" /></a>
         <ul>
           <li><a href="#">Why MagicMassage</a></li>
           <li><a href="#">Features</a></li>
